--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>org.example</groupId>
     <artifactId>myRabbitApp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>itBlog</module>
+        <module>subscriber</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
